--- a/index.html
+++ b/index.html
@@ -76,6 +76,12 @@
 
     <!--Integrantes-->
     
-    
+
+
+    <!--Footer-->
+    <footer class="footer">
+        &copy; Foo Fighters
+    </footer>
+
 </body>
 </html>
