--- a/index.html
+++ b/index.html
@@ -75,6 +75,35 @@
 
 
     <!--Integrantes-->
+
+    <div class="integrantes">
+
+        <h2>Integrantes</h2>
+
+        <ul>
+            <li>
+                <div>
+                   <img>
+                </div>
+            </li>
+            <li>
+                <div>
+                    integrante
+                </div>
+            </li>
+            <li>
+                <div>
+                    integrante
+                </div>
+            </li>
+            <li>
+                <div>
+                    integrante
+                </div>
+            </li>
+        </ul>
+
+    </div>
     
 
 
