--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
 
             <!--Navbar-->
     <div class="navbar">
-        <ul>
-            <li ><a><div class="logo"></div>
-            </a></li>
-        </ul>
-
-        <ul class="options">
-            <li><a>Historia</a></li>
-            <li><a>Albumes</a></li>
-            <li><a>Integrantes</a></li>
-            <li><a>Premios</a></li>
-        </ul>
+        <div class="logo">
+            <a href=""><img src="./assets/img/foo-fighters-logo.png" alt=""></a>
+        </div>
+        <div>
+            <ul class="options">
+                <li><a>Historia</a></li>
+                <li><a>Albumes</a></li>
+                <li><a>Integrantes</a></li>
+                <li><a>Premios</a></li>
+            </ul>
+        </div>
     </div>
     <!--End navbar-->
 
