--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
             <div>
                 <ul class="options">
                     <li><a>Historia</a></li>
-                    <li><a>Albumes</a></li>
-                    <li><a>Integrantes</a></li>
+                    <li><a href="#albums">Albumes</a></li>
+                    <li><a href="#integrantes">Integrantes</a></li>
                     <li><a>Premios</a></li>
                 </ul>
             </div>
@@ -89,7 +89,7 @@
 
     <!--Integrantes-->
 
-    <div class="integrantes">
+    <div id="integrantes" class="integrantes">
 
         <h2>Integrantes</h2>
 
