--- a/historia.html
+++ b/historia.html
@@ -19,7 +19,7 @@
         <!--Navbar-->
         <div class="navbar">
             <div class="logo">
-                <a href=""><img src="./assets/img/foo-fighters-logo.png" alt=""></a>
+                <a href="index.html"><img src="./assets/img/foo-fighters-logo.png" alt=""></a>
             </div>
             <div>
                 <ul class="options">
@@ -30,8 +30,6 @@
                 </ul>
             </div>
             <!--End navbar-->
-           
-           
         </div>
         <!--End navbar-->
         <h1 class="title">FOO FIGHTERS</h1>
