--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
         <!--Navbar-->
         <div class="navbar">
             <div class="logo">
-                <a href=""><img src="./assets/img/foo-fighters-logo.png" alt=""></a>
+                <a href="index.html"><img src="./assets/img/foo-fighters-logo.png" alt=""></a>
             </div>
             <div>
                 <ul class="options">
-                    <li><a href="#">Historia</a></li>
+                    <li><a href="">Historia</a></li>
                     <li><a href="#albums">Albumes</a></li>
                     <li><a href="#integrantes">Integrantes</a></li>
         
