Ingregrantes en index
integrantes agregados a la sección del índex

--- a/index.html
+++ b/index.html
@@ -66,33 +66,72 @@
 
     <!--Integrantes-->
 
-    <div id="integrantes" class="integrantes">
+    <!--Inicio integrantes-->
+    <div class="container">
+      <div class="row">
+        <div class="col-sm">
+          <div class="card" style="width: 18rem">
+            <img
+              class="card-img-top"
+              src="./assets/img/integrantes/DaveGrohl.jpg"
+              alt="Card image cap"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+            </div>
+          </div>
+        </div>
 
-        <h2>Integrantes</h2>
+        <div class="col-sm">
+          <div class="card" style="width: 18rem">
+            <img
+              class="card-img-top"
+              src="./assets/img/integrantes/ChrisShiflett.jpg"
+              alt="Card image cap"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm">
+          <div class="card" style="width: 18rem">
+            <img
+              class="card-img-top"
+              src="./assets/img/integrantes/NateMendel.jpg"
+              alt="Card image cap"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <br />
 
-        <ul>
-            <li>
-                <div>
-                    <img class="integrante1">
-                </div>
-            </li>
-            <li>
-                <div>
-                    <img class="integrante2">
-                </div>
-            </li>
-            <li>
-                <div>
-                    <img class="integrante3">
-                </div>
-            </li>
-            <li>
-                <div>
-                    <img class="integrante4">
-                </div>
-            </li>
-        </ul>
-
+      <div id="obras" class="vm">
+        <table class="tablaVM">
+          <tr>
+            <td class="tdVM">
+              <div class="botonVM"><a href="./AmorTC.html">Ver Mas!</a></div>
+            </td>
+          </tr>
+        </table>
+      </div>
+    </div>
+    <!--Fin intedrantes-->
     </div>
 
 
