--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!--Banner-->
     <div class="banner">
 
-        <!--Navbar-->
+
 
 
         <!--Navbar-->
@@ -51,14 +51,17 @@
 
 
     <!--Albumes-->
+    <h2>Albumes</h2>
     <div id="albums" class="row row-cols-1 row-cols-md-3 g-4">
 
 
     </div>
+    <div class="d-grid gap-2">
+        <button id="moreAlbums" class="btn btn-primary" type="button">Ver mas</button>
+    </div>
     <!-- 
         
     <div class="albumes">
-        <h2>Albumes</h2>
 
         <ul>
             <li class="album">
@@ -127,7 +130,7 @@
 
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
-
+<script src="./assets/js/index.js"></script>
 <script src="./assets/js/artist.js"></script>
 
 </html>
