Change and Added Integrante
agregado la pagina integrante

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
             <div>
                 <ul class="options">
-                    <li><a href="">Historia</a></li>
+                    <li><a href="#historia">Historia</a></li>
                     <li><a href="#albums">Albumes</a></li>
                     <li><a href="#integrantes">Integrantes</a></li>
         
@@ -67,7 +67,10 @@
     <!--Integrantes-->
 
     <!--Inicio integrantes-->
-    <div class="container">
+
+    <div id="integrantes" class="container">
+        <h2>Integrantes</h2>
+        <br><br>
       <div class="row">
         <div class="col-sm">
           <div class="card" style="width: 18rem">
@@ -125,7 +128,7 @@
         <table class="tablaVM">
           <tr>
             <td class="tdVM">
-              <div class="botonVM"><a href="./AmorTC.html">Ver Mas!</a></div>
+              <div class="botonVM"><a href="integrante.html">Ver Mas!</a></div>
             </td>
           </tr>
         </table>
