works search merge finished

--- a/index.html
+++ b/index.html
@@ -57,11 +57,43 @@
 
 
     <!--Albumes-->
-    <div id="albums" class="row row-cols-1 row-cols-md-3 g-4 albums">
+    <h2>Albumes</h2>
+    <div id="albums" class="row row-cols-1 row-cols-md-3 g-4">
 
 
     </div>
+    <div class="d-grid gap-2">
+        <button id="moreAlbums" class="btn btn-primary" type="button">Ver mas</button>
+    </div>
+    <!-- 
+        
+    <div class="albumes">
 
+        <ul>
+            <li class="album">
+                <div>
+                    album1
+                </div>
+            </li>
+            <li class="album">
+                <div>
+                    album1
+                </div>
+            </li>
+            <li class="album">
+                <div>
+                    album1
+                </div>
+            </li>
+            <li class="album">
+                <div>
+                    album1
+                </div>
+            </li>
+
+        </ul>
+
+    </div> -->
 
 
     <!--Integrantes-->
