Adde Descriptions and Names for Integrantes
cambios en integrantes

--- a/index.html
+++ b/index.html
@@ -72,55 +72,56 @@
         <h2>Integrantes</h2>
         <br><br>
       <div class="row">
-        <div class="col-sm">
-          <div class="card" style="width: 18rem">
-            <img
-              class="card-img-top"
-              src="./assets/img/integrantes/DaveGrohl.jpg"
-              alt="Card image cap"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
-            </div>
+       <div class="col-sm">
+        <div class="card" style="width: 18rem">
+          <img
+            class="card-img-top"
+            src="./assets/img/integrantes/DaveGrohl.jpg"
+            alt="Card image cap"
+          />
+          <div class="card-body">
+            <h5 class="card-title">Dave Grohl</h5>
+            <p class="card-text">
+               (Warren, Ohio; 14 de enero de 1969) es un músico multiinstrumentista estadounidense de rock. Saltó a la fama a comienzos de los años '90 como baterista de la icónica banda de grunge Nirvana, junto a Krist Novoselic y su líder y compositor, Kurt Cobain.
+                En 1994, tras la muerte de Cobain y el fin de Nirvana, formó la que es su actual agrupación, Foo Fighters, siendo él en un principio el único miembro y más tarde el vocalista, guitarrista y compositor. 
+            </p>
           </div>
         </div>
+      </div>
+
+            <div class="col-sm">
+        <div class="card" style="width: 18rem">
+          <img
+            class="card-img-top"
+            src="./assets/img/integrantes/NateMendel.jpg"
+            alt="Card image cap"
+          />
+          <div class="card-body">
+            <h5 class="card-title">Nate Mendel</h5>
+            <p class="card-text">
+              (nacido el 2 de diciembre de 1968 en Richland, Washington) es un bajista estadounidense de rock alternativo, mayormente conocido por ser miembro de Foo Fighters. 
+              Empezó su carrera musical con la banda punk Diddly Squat, para después unirse a otras dos de este género y un tanto famosas: Christ on a Crutch y Brotherhood. Junto con su banda Sunny Day Real Estate se convirtió en uno de los pioneros del emo a principios de los 90's
+            </p>
+          </div>
+        </div>
+      </div>
 
         <div class="col-sm">
-          <div class="card" style="width: 18rem">
-            <img
-              class="card-img-top"
-              src="./assets/img/integrantes/ChrisShiflett.jpg"
-              alt="Card image cap"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
-            </div>
+        <div class="card" style="width: 18rem">
+          <img
+            class="card-img-top"
+            src="./assets/img/integrantes/ChrisShiflett.jpg"
+            alt="Card image cap"
+          />
+          <div class="card-body">
+            <h5 class="card-title">Chris Shiflett</h5>
+            <p class="card-text">
+              (n. 6 de mayo de 1971), más conocido como Chris Shiflett, es un guitarrista estadounidense de punk y rock alternativo.
+              Shiflett inició su carrera musical en una banda llamada Lost Kittenz en la que tocaba con los ahora miembros de Sugarcult. Tiempo después se unió como guitarrista residente de la energética y bien conocida banda punk del área de la Bahía de San Francisco No Use for a Name.Su salida fue abrupta, pues apenas salia "More Betterness!"
+            </p>
           </div>
         </div>
-        <div class="col-sm">
-          <div class="card" style="width: 18rem">
-            <img
-              class="card-img-top"
-              src="./assets/img/integrantes/NateMendel.jpg"
-              alt="Card image cap"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">
-                Some quick example text to build on the card title and make up
-                the bulk of the card's content.
-              </p>
-            </div>
-          </div>
-        </div>
+      </div>
       </div>
       <br />
 
