--- a/integrante.html
+++ b/integrante.html
@@ -55,6 +55,7 @@
             <h5 class="card-title">Dave Grohl</h5>
             <p class="card-text">
                (Warren, Ohio; 14 de enero de 1969) es un músico multiinstrumentista estadounidense de rock. Saltó a la fama a comienzos de los años '90 como baterista de la icónica banda de grunge Nirvana, junto a Krist Novoselic y su líder y compositor, Kurt Cobain.
+                En 1994, tras la muerte de Cobain y el fin de Nirvana, formó la que es su actual agrupación, Foo Fighters, siendo él en un principio el único miembro y más tarde el vocalista, guitarrista y compositor. 
             </p>
           </div>
         </div>
@@ -69,8 +70,8 @@
           <div class="card-body">
             <h5 class="card-title">Nate Mendel</h5>
             <p class="card-text">
-              nacido el 2 de diciembre de 1968 en Richland, Washington, es un bajista estadounidense de rock alternativo, mayormente conocido por ser miembro de Foo Fighters. 
-              Empezó su carrera musical con la banda punk Diddly Squat, para después unirse a otras dos de este género y un tanto famosas: Christ on a Crutch y Brotherhood. 
+              (nacido el 2 de diciembre de 1968 en Richland, Washington) es un bajista estadounidense de rock alternativo, mayormente conocido por ser miembro de Foo Fighters. 
+              Empezó su carrera musical con la banda punk Diddly Squat, para después unirse a otras dos de este género y un tanto famosas: Christ on a Crutch y Brotherhood. Junto con su banda Sunny Day Real Estate se convirtió en uno de los pioneros del emo a principios de los 90's
             </p>
           </div>
         </div>
@@ -86,7 +87,7 @@
             <h5 class="card-title">Chris Shiflett</h5>
             <p class="card-text">
               (n. 6 de mayo de 1971), más conocido como Chris Shiflett, es un guitarrista estadounidense de punk y rock alternativo.
-              Shiflett inició su carrera musical en una banda llamada Lost Kittenz en la que tocaba con los ahora miembros de Sugarcult. Tiempo después se unió como guitarrista residente de la energética y bien conocida banda punk del área de la Bahía de San Francisco No Use for a Name.
+              Shiflett inició su carrera musical en una banda llamada Lost Kittenz en la que tocaba con los ahora miembros de Sugarcult. Tiempo después se unió como guitarrista residente de la energética y bien conocida banda punk del área de la Bahía de San Francisco No Use for a Name.Su salida fue abrupta, pues apenas salia "More Betterness!"
             </p>
           </div>
         </div>
@@ -104,7 +105,8 @@
           <div class="card-body">
             <h5 class="card-title">Pat Smear</h5>
             <p class="card-text">              
-              (nacido como George Albert Ruthenberg el 5 de agosto de 1959)Smear nació y creció en el sector oeste de la ciudad de Los Ángeles, en California. Su madre es afroamericana y su padre es alemán, es un guitarrista de rock estadounidense, exmiembro de la banda Germs y actual miembro de Foo Fighters. También es reconocido por haber tocado en vivo con Nirvana como guitarrista rítmico
+              (nacido como George Albert Ruthenberg el 5 de agosto de 1959)Smear nació y creció en el sector oeste de la ciudad de Los Ángeles, en California. Su madre es afroamericana y su padre es alemán, es un guitarrista de rock estadounidense, exmiembro de la banda Germs y actual miembro de Foo Fighters. También es reconocido por haber tocado en vivo con Nirvana como guitarrista rítmico.
+               Su padres afroamericana y alemán. en 1976, Smear conoció a Darby Crash 
             </p>
           </div>
         </div>
@@ -119,7 +121,7 @@
           <div class="card-body">
             <h5 class="card-title">Rami Jaffee</h5>
             <p class="card-text">
-               (nacido el 11 de marzo de 1969) es el pianista y organista de la banda californiana The Wallflowers, que comparte con Jakob Dylan. Rami Jaffee, nacido el 11 de marzo de 1969, en Los Ángeles, es mejor conocido como el tecladista de The Wallflowers y el trabajo de varias bandas y artistas como Foo Fighters, Pete Yorn, Soul Asylum, Pearl Jam, Stone Sour, Arturo José y Coheed and Cambria.
+               (nacido el 11 de marzo de 1969) es el pianista y organista de la banda californiana The Wallflowers, que comparte con Jakob Dylan. Rami Jaffee, nacido el 11 de marzo de 1969, en Los Ángeles, es mejor conocido como el tecladista de The Wallflowers y el trabajo de varias bandas y artistas como Foo Fighters, Pete Yorn, Soul Asylum, Pearl Jam, Stone Sour, Arturo José y Coheed and Cambria. Jaffee compró su primer teclado a los 13 años.
             </p>
           </div>
         </div>
@@ -136,7 +138,7 @@
             <p class="card-text">
               Taylor Hawkins nació en Forth Worth, Texas el 17 de febrero de 1972. Su familia se mudó a Laguna Beach, California en 1976. Tiene dos hermanos, Jason y Heather.
               Asistió al Thurston Jr. High School y más tarde fue a Laguna Beach High School.
-              Se inició en los estudios musicales cuando tan sólo era un niño. Taylor inició y acabó su carrera de conservatorio, en percusión clásica. Así mismo, es capaz de tocar otros instrumentos como son la guitarra y el piano, lo que le dota de una gran musicalidad.  
+              Se inició en los estudios musicales cuando tan sólo era un niño. Taylor inició y acabó su carrera de conservatorio, en percusión clásica. Así mismo, es capaz de tocar la guitarra y el piano, posee una gran musicalidad.  
             </p>
           </div>
         </div>
@@ -162,7 +164,7 @@
               <h5 class="card-title">Franz Stahl</h5>
               <p class="card-text">
                 (n. 30 de octubre de 1962) es un guitarrista estadounidense, miembro de la banda de hardcore punk Scream.
-                Originario de Washington, D. C., Stahl es más conocido por haber pertenecido al grupo de hardcore punk Scream junto con Dave Grohl, quien, al formar su nuevo grupo después de la disolución de Nirvana, solicita los servicios de Stahl, quien los aprovecharía sólo durante un brevísimo periodo de tiempo debido a diferencias creativas en el seno de la banda. 
+                Originario de Washington, D. C., Stahl es más conocido por haber pertenecido al grupo de hardcore punk Scream junto con Dave Grohl, quien, al formar su nuevo grupo después de la disolución de Nirvana, solicita los servicios de Stahl. 
               </p>
             </div>
           </div>
