--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
             <div>
                 <ul class="options">
-                    <li><a href="#historia">Historia</a></li>
+                    <li><a href="historia.html">Historia</a></li>
                     <li><a href="#albums">Albumes</a></li>
                     <li><a href="#integrantes">Integrantes</a></li>
 
