--- a/albums.html
+++ b/albums.html
@@ -15,7 +15,7 @@
     <!--Navbar-->
     <div class="navbar">
         <div class="logo">
-            <a href=""><img src="./assets/img/foo-fighters-logo.png" alt=""></a>
+            <a href="index.html"><img src="./assets/img/foo-fighters-logo.png" alt=""></a>
         </div>
         <div>
             <ul class="options">
