--- a/integrante.html
+++ b/integrante.html
@@ -30,7 +30,7 @@
           <ul class="options">
             <li><a href="index.html">Home</a></li>
             <li><a href="#albums">Albumes</a></li>
-            <li><a href="#integrantes">Integrantes</a></li>
+          
           </ul>
         </div>
         <!--End navbar-->
@@ -189,7 +189,7 @@
 <br>
     <!--Inicio ex-intedrantes-->
     <!--Footer-->
-    <footer class="footer">&copy; Foo Fighters</footer>
+    <footer class="footer"><P>&copy; Foo Fighters</P></footer>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"
