--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
     <!--Inicio integrantes-->
 
-    <div id="integrantes" class="container">
+    <div id="integrantes" class="container ">
         <h2>Integrantes</h2>
         <br><br>
       <div class="row">
@@ -113,7 +113,7 @@
           />
           <div class="card-body">
             <h5 class="card-title">Dave Grohl</h5>
-            <p class="card-text">
+            <p class="card-text ">
                (Warren, Ohio; 14 de enero de 1969) es un músico multiinstrumentista estadounidense de rock. Saltó a la fama a comienzos de los años '90 como baterista de la icónica banda de grunge Nirvana, junto a Krist Novoselic y su líder y compositor, Kurt Cobain.
                 En 1994, tras la muerte de Cobain y el fin de Nirvana, formó la que es su actual agrupación, Foo Fighters, siendo él en un principio el único miembro y más tarde el vocalista, guitarrista y compositor. 
             </p>
@@ -174,11 +174,12 @@
 
     <!--Footer-->
     <footer class="footer">
-        &copy; Foo Fighters
+        <P>&copy; Foo Fighters</P>
     </footer>
 
 </body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
+
+<scripsssss src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></scripsssss>
 <script src="./assets/js/index.js"></script>
 <script src="./assets/js/artist.js"></script>
 
