Redirecicón a historia.html

--- a/historia.html
+++ b/historia.html
@@ -10,42 +10,42 @@
     <title>Historia</title>
 </head>
 <body>
-     <!--Banner-->
+    <!--Banner-->
     <div class="banner">
-
-        <!--Navbar-->
-
-
         <!--Navbar-->
         <div class="navbar">
             <div class="logo">
-                <a href="index.html"><img src="./assets/img/foo-fighters-logo.png" alt=""></a>
+                <a href="./index.html"><img src="./assets/img/foo-fighters-logo.png" alt=""></a>
             </div>
             <div>
                 <ul class="options">
-                    <li><a>Historia</a></li>
-                    <li><a href="./index.html#albums">Albumes</a></li>
-                    <li><a href="./index.html#integrantes">Integrantes</a></li>
-        
+                    <li><a href="index.html#historia">Historia</a></li>
+                    <li><a href="index.html#albums">Albumes</a></li>
+                    <li><a href="index.html#integrantes">Integrantes</a></li>
                 </ul>
             </div>
             <!--End navbar-->
         </div>
         <!--End navbar-->
         <h1 class="title">FOO FIGHTERS</h1>
-        
-
     </div>
+
     <!-- Inicio historia -->
     <div class="history">
         <h2>Sus inicios...</h2>
         <br>
-        <p>Es una banda de rock formada en Seattle en 1994 por Dave Grohl, ex baterista de Nirvana como proyecto personal después de la disolución del grupo. Su nombre se debe a los casos de OVNI's reportados por lo pilotos de aviones de los aliados en la segunda guerra mundial. A lo largo de la vida Foo Fighters han ganado 12 premios grammys, 4 de ellos por "Mejor Albúm de Rock". Solo en Estados Unidos han llegado a vender más de 12 millones de copias.</p>
+        <p>Es una banda de rock formada en Seattle en 1994 por Dave Grohl, ex baterista de Nirvana como proyecto personal después de la disolución del grupo. Su nombre se debe a los fenómenos aéreos reportados por lo pilotos de aviones de los aliados en sus misiones de combate durante la Segunda Guerra Mundial. A lo largo de su trayectoria la banda ha ganado 12 premios Grammys, 4 de ellos por "Mejor Albúm de Rock". Solo en Estados Unidos han llegado a vender más de 12 millones de copias.</p>
         <br>
-        <p>El primer albúm, titulado homonimamente como Foo Fighters fue grabado unicamente por Grohl, en el cuál el realizo la grabación de todos los instrumentos de las canciones y las edito el mismo. Grohl repartio casettes con el albúm entre sus amigos los cuales alabaron el trabajo realizado por el músico e incluso <i>This is Call</i> llego a ser publicado en la radio. Debido a este exito Dave Grohl decidio formalizar su proyecto reclutando a otros músicos.</p>
+        <p>El primer albúm, titulado simplemente como "Foo Fighters" fue grabado por Dave Grohl, en el cuál él realizo la grabación de todos los instrumentos de las canciones y la edición de los mismos. Grohl repartió casettes con el albúm entre sus amigos los cuales alabaron el trabajo realizado por el músico e incluso <i>This is Call</i> llego a ser publicado en la radio. Debido a este éxito Dave Grohl decidió formalizar su proyecto reclutando a otros músicos. Los primeros miembros en agregarse al grupo fueron el bajista Nate Mendel y el baterista William Goldsmith ambos miembros de la banda de rock Sunny Day Real Estate. También el guitarrista Pat Smear, conocido por trabajar como guitarrista de apoyo para Nirvana en sus giras.</p>
         <br>
-        <p>Los primeros miembros en agregarse al grupo fueron el bajista Nate Mendel y el baterista William Goldsmith ambos miembros de la banda de rock Sunny Day Real Estate.También el guitarrista Pat Smear, conocido por trabajar como guitarrista ritmico para Nirvana en sus giras.
+        <p>Goldsmith abadonó la banda durante la grabación de su segundo albúm "The Colour and the Shape", debido a que varias partes de batería fueron re grabadas por Grohl. Después de eso, Taylor Hawkins se unío a la banda en reemplazo de Goldsmith y Smear también dejaría la banda poco tiempo después. Luego de la grabación del tercer albúm "There is Nothing Left to Lose" Chris Shiflett se unió a la banda como guitarrista principal. En 2005, después de la publicación de su quinto albúm "In your Honor" Pat Snear regreso a la banda pero no fue miembro oficial sino hasta 2010.</p>
     </div>
     <!-- fin historia -->
+
+    <!--Footer-->
+    <footer class="footer">
+        <P>&copy; Foo Fighters</P>
+    </footer>
+
 </body>
 </html>
