--- a/index.html
+++ b/index.html
@@ -11,37 +11,25 @@
 
     <title>Foo Fighters</title>
 </head>
-
 <body>
-
-
     <!--Banner-->
     <div class="banner">
-
-
-
-
         <!--Navbar-->
         <div class="navbar">
             <div class="logo">
-                <a href="index.html"><img src="./assets/img/foo-fighters-logo.png" alt=""></a>
+                <a href="./index.html"><img src="./assets/img/foo-fighters-logo.png" alt=""></a>
             </div>
             <div>
                 <ul class="options">
                     <li><a href="#historia">Historia</a></li>
                     <li><a href="#albums">Albumes</a></li>
                     <li><a href="#integrantes">Integrantes</a></li>
-
                 </ul>
             </div>
             <!--End navbar-->
-
-
         </div>
         <!--End navbar-->
         <h1 class="title">FOO FIGHTERS</h1>
-
-
     </div>
 
     <!--historia-->
@@ -49,21 +37,28 @@
 
         <p>
             Foo Fighters es una banda de rock estadounidense formada en la ciudad de Seattle en 1994 por Dave Grohl, exbaterista de Nirvana y Scream. El grupo debe su nombre a los ovnis y los diversos fenómenos aéreos que fueron reportados por los pilotos de los
-            aviones aliados en la Segunda Guerra Mundial, que se conocen colectivamente como Foo Fighters. Antes del lanzamiento de su álbum debut en 1995, Grohl, como único miembro oficial, reclutó al bajista Nate Mendel y el baterista William Goldsmith,
+            aviones aliados en la Segunda Guerra Mundial, que se conocen colectivamente como Foo Fighters. Después del lanzamiento de su álbum debut en 1995, Grohl, como único miembro oficial, reclutó al bajista Nate Mendel y el baterista William Goldsmith,
             ambos anteriormente miembros de Sunny Day Real Estate, así como su compañero en las giras de Nirvana, Pat Smear como guitarrista para completar la alineación.
         </p>
 
+        <div id="historia" class="vm">
+            <table class="tablaVM">
+                <tr>
+                    <td class="tdVM">
+                        <div class="botonVM"><a href="historia.html">Ver Mas!</a></div>
+                    </td>
+                </tr>
+            </table>
+        </div>
     </div>
-
 
     <!--Albumes-->
     <h2>Albumes</h2>
     <div id="albums" class="row row-cols-1 row-cols-md-3 g-4">
 
-
     </div>
     <div class="d-grid gap-2">
-        <button id="moreAlbums" class="btn btn-primary" type="button">Ver mas</button>
+        <button id="moreAlbums" class="btn btn-primary" type="button">Ver más</button>
     </div>
 
 
@@ -134,8 +129,6 @@
     <!--Fin intedrantes-->
     </div>
 
-
-
     <!--Footer-->
     <footer class="footer">
         <P>&copy; Foo Fighters</P>
@@ -143,7 +136,7 @@
 
 </body>
 
-<scripsssss src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></scripsssss>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
 <script src="./assets/js/index.js"></script>
 <script src="./assets/js/artist.js"></script>
 
