--- a/albums.html
+++ b/albums.html
@@ -19,10 +19,8 @@
         </div>
         <div>
             <ul class="options">
-                <li><a>Historia</a></li>
-                <li><a>Albumes</a></li>
-                <li><a>Integrantes</a></li>
-                <li><a>Premios</a></li>
+                <li><a href="historia.html">Historia</a></li>
+                <li><a href="integrante.html">Integrantes</a></li>
             </ul>
         </div>
         <!--End navbar-->
