--- a/index.html
+++ b/index.html
@@ -54,13 +54,20 @@
 
     <!--Albumes-->
     <h2>Albumes</h2>
-    <div id="albums" class="row row-cols-1 row-cols-md-3 g-4">
+    <div id="albums" class="row row-cols-1 row-cols-md-3 g-4 albums">
 
     </div>
-    <div class="d-grid gap-2">
-        <button id="moreAlbums" class="btn btn-primary" type="button">Ver más</button>
+   
+   
+    <div  class="vm">
+        <table class="tablaVM">
+            <tr>
+                <td class="tdVM">
+                    <div id="moreAlbums" class="botonVM white"><a>Ver Mas!</a></div>
+                </td>
+            </tr>
+        </table>
     </div>
-
 
 
     <!--Integrantes-->
