--- a/historia.html
+++ b/historia.html
@@ -19,9 +19,8 @@
             </div>
             <div>
                 <ul class="options">
-                    <li><a href="index.html#historia">Historia</a></li>
-                    <li><a href="index.html#albums">Albumes</a></li>
-                    <li><a href="index.html#integrantes">Integrantes</a></li>
+                    <li><a href="albums.html">Albumes</a></li>
+                    <li><a href="integrante.html">Integrantes</a></li>
                 </ul>
             </div>
             <!--End navbar-->
