--- a/integrante.html
+++ b/integrante.html
@@ -24,12 +24,12 @@
       <!--Navbar-->
       <div class="navbar">
         <div class="logo">
-          <a href=""><img src="./assets/img/foo-fighters-logo.png" alt="" /></a>
+          <a href="index.html"><img src="./assets/img/foo-fighters-logo.png" alt="" /></a>
         </div>
         <div>
           <ul class="options">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="#albums">Albumes</a></li>
+            <li><a href="historia.html">Historia</a></li>
+            <li><a href="albums.html">Albumes</a></li>
           
           </ul>
         </div>
