--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
         </div>
     </div>
     <!--Fin intedrantes-->
+    <div id="tracks"></div>
     </div>
 
 
@@ -139,7 +140,7 @@
 
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
-<script src="./assets/js/index.js"></script>
+
 <script src="./assets/js/artist.js"></script>
 
 </html>
