work refresh token

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <title>Foo Fighters</title>
 </head>
+
 <body>
     <!--Banner-->
     <div class="banner">
@@ -60,7 +61,7 @@
     <div class="d-grid gap-2">
         <button id="moreAlbums" class="btn btn-primary" type="button">Ver más</button>
     </div>
-
+    <div id="tracks"></div>
 
 
     <!--Integrantes-->
@@ -70,23 +71,19 @@
     <div id="integrantes" class="container ">
         <h2>Integrantes</h2>
         <br><br>
-      <div class="row">
-       <div class="col-sm">
-        <div class="card" style="width: 18rem">
-          <img
-            class="card-img-top"
-            src="./assets/img/integrantes/DaveGrohl.jpg"
-            alt="Card image cap"
-          />
-          <div class="card-body">
-            <h5 class="card-title">Dave Grohl</h5>
-            <p class="card-text ">
-               (Warren, Ohio; 14 de enero de 1969) es un músico multiinstrumentista estadounidense de rock. Saltó a la fama a comienzos de los años '90 como baterista de la icónica banda de grunge Nirvana, junto a Krist Novoselic y su líder y compositor, Kurt Cobain.
-                En 1994, tras la muerte de Cobain y el fin de Nirvana, formó la que es su actual agrupación, Foo Fighters, siendo él en un principio el único miembro y más tarde el vocalista, guitarrista y compositor. 
-            </p>
-          </div>
-        </div>
-      </div>
+        <div class="row">
+            <div class="col-sm">
+                <div class="card" style="width: 18rem">
+                    <img class="card-img-top" src="./assets/img/integrantes/DaveGrohl.jpg" alt="Card image cap" />
+                    <div class="card-body">
+                        <h5 class="card-title">Dave Grohl</h5>
+                        <p class="card-text ">
+                            (Warren, Ohio; 14 de enero de 1969) es un músico multiinstrumentista estadounidense de rock. Saltó a la fama a comienzos de los años '90 como baterista de la icónica banda de grunge Nirvana, junto a Krist Novoselic y su líder y compositor, Kurt Cobain.
+                            En 1994, tras la muerte de Cobain y el fin de Nirvana, formó la que es su actual agrupación, Foo Fighters, siendo él en un principio el único miembro y más tarde el vocalista, guitarrista y compositor.
+                        </p>
+                    </div>
+                </div>
+            </div>
 
             <div class="col-sm">
                 <div class="card" style="width: 18rem">
