--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     </div>
 
     <!--Albumes-->
+    <div class="albums">
     <h2>Albumes</h2>
     <div id="albums" class="row row-cols-1 row-cols-md-3 g-4 albums">
 
@@ -71,11 +72,12 @@
     </div>
     <div id="tracks"></div>
 
-    <!--Integrantes-->
+     </div>
+
 
     <!--Inicio integrantes-->
 
-    <div id="integrantes" class="container ">
+    <div id="integrantes" class="container integrantes">
         <h2>Integrantes</h2>
         <br><br>
         <div class="row">
